# tuned-rs

./: Cargo.toml  Makefile  README.md  tuned-rs.spec
packaging/: net.hadess.PowerProfiles.policy  net.hadess.PowerProfiles.service  org.freedesktop.UPower.PowerProfiles.conf  org.freedesktop.UPower.PowerProfiles.policy  org.freedesktop.UPower.PowerProfiles.service  ppd.conf  tuned-main.conf  tuned-rs-ppd.service  tuned-rs.service
profiles/balanced-battery/: tuned.conf
selinux/: tuned-rs.fc  tuned-rs.te
src/: config.rs  daemon.rs  engine.rs  hal.rs  ipc.rs  lib.rs  main.rs  monitor.rs  polkit.rs  profile.rs  rollback.rs
src/ppd/: config.rs  controller.rs  ipc.rs  mod.rs  polkit.rs  tuned_client.rs
src/tuning/: acpi.rs  cpu.rs  disk.rs  mod.rs  modifiers.rs  sysctl.rs  sysfs.rs  vm.rs
