[package]
name = "tuned-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tuned_rs"
path = "src/lib.rs"

[[bin]]
name = "tuned-rs"
path = "src/main.rs"

[[bin]]
name = "tuned-rs-ppd"
path = "src/bin/tuned-rs-ppd.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
zbus = "4.1"
tokio-udev = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
configparser = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.10"
